--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,13 +26,12 @@
 
     <!--Used in overflow menu to refresh weather data-->
     <string name="action_refresh">Refresh</string>
-
+    <string name="action_map">Map Location</string>
+    <string name="action_share">Share</string>
     <string name="error_message">
         An error has occurred. Please try again by clicking REFRESH
     </string>
 
-
-    <!-- - - - - - - - - - - - - -->
     <!--Used by SunshineDateUtils-->
     <!-- - - - - - - - - - - - - -->
 
